# pybind

./: .gitignore  README.md  add_item.py  binds.csv  main.py  pyproject.toml  pyvenv.cfg  testfile.gpg  ui_main.py
Scripts/: activate  activate.bat
plugins/pybind/: README.md  __init__.py
plugins/run/: __init__.py
plugins/type/: __init__.py
pybind/: __main__.py  add_item.py  ui_main.py
pybind/plugins/run/: README.md  __init__.py
pybind/plugins/type/: README.md
